force-app/main/default/objects/MY_Partner__c/MY_Partner__c.object-meta.xml
<CustomObject>
    <description>testing object</description>
    <label>MY Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MY partners</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>