force-app/main/default/objects/MY_Partner__c/fields/cost__c.field-meta.xml
<CustomField>
    <fullName>cost__c</fullName>
    <label>cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>